almost done, TODO fix struct for acceptClients to hold server

--- a/testing/makefile
+++ b/testing/makefile
@@ -3,8 +3,8 @@ SRC = ../src/
 CCFLAGS = -Wall -c -pthread -I $(INCLUDE) -ggdb
 
 #create executalbe file by linking the object files
-a.out: GameInfo.o Utility.o GamesInfoLists.o CloseCommand.o JoinCommand.o ListGamesCommand.o PlayCommand.o StartGameCommand.o CommandsManager.o ClientHandler.o Server.o main.o
-	g++ -pthread -Wall GameInfo.o Utility.o GamesInfoLists.o CloseCommand.o JoinCommand.o ListGamesCommand.o PlayCommand.o StartGameCommand.o CommandsManager.o ClientHandler.o Server.o main.o
+a.out: GameInfo.o Utility.o GamesInfoLists.o CloseCommand.o JoinCommand.o ListGamesCommand.o PlayCommand.o StartGameCommand.o CommandsManager.o ClientHandler.o Task.o ThreadPool.o Server.o main.o
+	g++ -pthread -Wall GameInfo.o Utility.o GamesInfoLists.o CloseCommand.o JoinCommand.o ListGamesCommand.o PlayCommand.o StartGameCommand.o CommandsManager.o ClientHandler.o Task.o ThreadPool.o Server.o main.o
 
 #creating all object files from source code
 Utility.o: $(SRC)Utility.cpp $(INCLUDE)Utility.h
@@ -36,6 +36,12 @@ CommandsManager.o: $(SRC)CommandsManager.cpp $(INCLUDE)CommandsManager.h $(INCLU
 	
 ClientHandler.o: $(SRC)ClientHandler.cpp $(INCLUDE)ClientHandler.h $(INCLUDE)CommandsManager.h
 	g++ $(CCFLAGS) $(SRC)ClientHandler.cpp
+	
+Task.o: $(SRC)Task.cpp $(INCLUDE)Task.h
+	g++ $(CCFLAGS) $(SRC)Task.cpp
+	
+ThreadPool.o: $(SRC)ThreadPool.cpp $(INCLUDE)ThreadPool.h $(INCLUDE)Task.h
+	g++ $(CCFLAGS) $(SRC)ThreadPool.cpp
 	
 Server.o: $(SRC)Server.cpp $(INCLUDE)Server.h
 	g++ $(CCFLAGS) $(SRC)Server.cpp
